--- a/code-app/public/staticwebapp.config.json
+++ b/code-app/public/staticwebapp.config.json
@@ -21,7 +21,7 @@
   },
   "globalHeaders": {
     "X-Content-Type-Options": "nosniff",
-    "Content-Security-Policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.microsoftonline.com https://*.microsoft.com https://*.sharepoint.com https://*.dynamics.com https://graph.microsoft.com https://*.azure.com https://*.azurestaticapps.net; img-src 'self' data: https:; font-src 'self' data: https://res-1.cdn.office.net; frame-ancestors 'self' https://*.microsoftonline.com https://login.microsoftonline.com;"
+    "Content-Security-Policy": "default-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.microsoftonline.com https://*.microsoft.com https://*.sharepoint.com https://*.dynamics.com https://graph.microsoft.com https://*.azure.com https://*.azurestaticapps.net; img-src 'self' data: https:; font-src 'self' data: https://res-1.cdn.office.net; frame-src 'self' https://*.microsoftonline.com https://login.microsoftonline.com; frame-ancestors 'self' https://*.microsoftonline.com https://login.microsoftonline.com;"
   },
   "mimeTypes": {
     ".json": "application/json",
